Refactor the way we render document attributes
So we can display a set of resources in a given fieldset

--- a/app/views/renalware/transplants/donor_operations/show.html.slim
+++ b/app/views/renalware/transplants/donor_operations/show.html.slim
@@ -1,15 +1,14 @@
-= render "record_header"
+= render layout: "renalware/patients/layout", locals: { title: "Transplant Donor Operation" } do
+  - return unless @donor_operation
 
-- return unless @donor_operation
-.document-view
-  = render "renalware/shared/attributes_group",
-      legend: "Operation", destination: "operation",
-      resource: @donor_operation,
-      attributes: [:performed_on, :kidney_side, :operating_surgeon, :anaesthetist,
-        :nephrectomy_type, :nephrectomy_type_other,
-        :donor_splenectomy_peri_or_post_operatively, :notes]
+  .document-view
+    = render "renalware/shared/attributes_group",
+        legend: "Operation", destination: "operation",
+        resources: { @donor_operation => [:performed_on, :kidney_side, :operating_surgeon, :anaesthetist,
+          :nephrectomy_type, :nephrectomy_type_other,
+          :donor_splenectomy_peri_or_post_operatively, :notes] }
 
-  - ["Diagnosis", "Outcome"].each do |group|
-    = render "renalware/shared/documents/attributes_group",
-        group: @donor_operation.document.public_send(group.parameterize('_')),
-        legend: group, destination: group.parameterize('_')
+    - ["Diagnosis", "Outcome"].each do |group|
+      = render "renalware/shared/documents/attributes_group",
+          group: @donor_operation.document.public_send(group.parameterize('_')),
+          legend: group, destination: group.parameterize('_')
