--- a/app/views/renalware/shared/_attributes_group.html.slim
+++ b/app/views/renalware/shared/_attributes_group.html.slim
@@ -1,3 +1,5 @@
 = render layout: "renalware/shared/magellan_block",
-  locals: { destination: destination, legend: legend } do
-  = render "renalware/shared/attributes_list", resource: resource, attributes: attributes
+    locals: { destination: destination, legend: legend } do
+  dl
+    - resources.each do |resource, attributes|
+      = render "renalware/shared/attributes_list", resource: resource, attributes: attributes
