--- a/app/views/renalware/transplants/recipient_operations/show.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/show.html.slim
@@ -1,14 +1,29 @@
 = render layout: "renalware/patients/layout", locals: { title: "Transplant Recipient Operation" } do
   - return unless @recipient_operation
+
+  ruby:
+    recipient = @recipient_operation.document.recipient
+    recipient_resources = {
+      @recipient_operation => [:recipient_age_at_operation],
+      recipient            => recipient.class.attributes_list
+    }
+
+    operation_resources = { @recipient_operation => [:performed_on, :theatre_case_start_time,
+      :donor_kidney_removed_from_ice_at,
+      :kidney_perfused_with_blood_at, :operation_type, :transplant_site,
+      :cold_ischaemic_time, :warm_ischaemic_time, :notes]
+    }
+
   .document-view
     = render "renalware/shared/attributes_group",
         legend: "Operation", destination: "operation",
-        resource: @recipient_operation,
-        attributes: [:performed_on, :theatre_case_start_time, :donor_kidney_removed_from_ice_at,
-          :kidney_perfused_with_blood_at, :operation_type, :transplant_site,
-          :cold_ischaemic_time, :warm_ischaemic_time, :notes]
+        resources: operation_resources
 
-    - ["Recipient", "Donor", "Cadaveric Donor", "Donor Specific Antibodies", "BK Virus", "Outcome"].each do |group|
+    = render "renalware/shared/attributes_group",
+        legend: "Recipient", destination: "recipient",
+        resources: recipient_resources
+
+    - ["Donor", "Cadaveric Donor", "Donor Specific Antibodies", "BK Virus", "Outcome"].each do |group|
       = render "renalware/shared/documents/attributes_group",
           group: @recipient_operation.document.public_send(group.parameterize('_')),
           legend: group, destination: group.parameterize('_')
