--- a/app/views/renalware/transplants/registrations/show.html.slim
+++ b/app/views/renalware/transplants/registrations/show.html.slim
@@ -9,6 +9,6 @@
 
     = render "renalware/shared/attributes_group",
         legend: "Admin", destination: "admin",
-        resource: @registration,
+        model: @registration,
         attributes: %i(referred_on assessed_on contact notes)
 
