--- a/app/views/renalware/shared/_attributes_list.html.slim
+++ b/app/views/renalware/shared/_attributes_list.html.slim
@@ -1,7 +1,7 @@
 ruby:
   tuples = Array.wrap(attributes).map do |attribute|
-    label = resource.class.human_attribute_name(attribute)
-    value = resource.public_send(attribute)
+    label = model.class.human_attribute_name(attribute)
+    value = model.public_send(attribute)
     html = if value.respond_to?(:nested_attribute?)
       render(value)
     else
