--- a/app/views/renalware/transplants/recipient_workups/_summary.html.slim
+++ b/app/views/renalware/transplants/recipient_workups/_summary.html.slim
@@ -1,27 +1,28 @@
 fieldset
   legend Recipient Workup
 
-  - if @recipient_workup.persisted?
-    .large-3.columns
+  .row
+    - if @recipient_workup.persisted?
+      .large-3.columns
 
-    .large-3.columns
+      .large-3.columns
 
-    .large-4.columns
-      dl
-        dt Last Update:
-        dd
-          - if version = @recipient_workup.versions.last
-            = l version.created_at
-            | &nbsp;by&nbsp;
-            = who_did_it version
+      .large-4.columns
+        dl
+          dt Last Update:
+          dd
+            - if version = @recipient_workup.versions.last
+              = l version.created_at
+              | &nbsp;by&nbsp;
+              = who_did_it version
 
-    .large-2.columns
-      .right
-        = link_to "View", patient_transplants_recipient_workup_path(@patient), class: "button tiny"
-        | &nbsp;
-        = link_to "Edit", edit_patient_transplants_recipient_workup_path(@patient), class: "button tiny"
-  - else
-    .call-to-action
-      = link_to edit_patient_transplants_recipient_workup_path(@patient) do
-        i.fa.fa-plus-circle
-        | Enter workup
+      .large-2.columns
+        .right
+          = link_to "View", patient_transplants_recipient_workup_path(@patient), class: "button tiny"
+          | &nbsp;
+          = link_to "Edit", edit_patient_transplants_recipient_workup_path(@patient), class: "button tiny"
+    - else
+      .call-to-action
+        = link_to edit_patient_transplants_recipient_workup_path(@patient) do
+          i.fa.fa-plus-circle
+          | Enter workup
