--- a/app/views/renalware/transplants/recipient_followups/show.html.slim
+++ b/app/views/renalware/transplants/recipient_followups/show.html.slim
@@ -6,10 +6,9 @@
   .document-view
     = render "renalware/shared/attributes_group",
         legend: "Transplant Failure", destination: "transplant_failure",
-        resource: @recipient_followup,
-        attributes: [:stent_removed_on, :transplant_failed, :transplant_failed_on,
+        models: { @recipient_followup => [:stent_removed_on, :transplant_failed, :transplant_failed_on,
           :transplant_failure_cause_description, :transplant_failure_cause_other,
-          :transplant_failure_notes]
+          :transplant_failure_notes] }
 
     = render "renalware/shared/documents/attributes_group",
         group: @recipient_followup.document.cardiovascular_complication,
@@ -17,13 +16,11 @@
 
     = render "renalware/shared/attributes_group",
         legend: "Observations", destination: "observations",
-        resource: @recipient_followup.document,
-        attributes: [:malignancy_within_first_3_months,
+        models: { @recipient_followup.document => [:malignancy_within_first_3_months,
           :malignancy_within_first_12_months, :acute_rejection_biopsy_proven,
           :recipient_pregnancy,
-          :primary_or_recurrent_renal_disease]
+          :primary_or_recurrent_renal_disease] }
 
     = render "renalware/shared/attributes_group",
         legend: "Admin", destination: "admin",
-        resource: @recipient_followup,
-        attributes: [:notes]
+        models: { @recipient_followup => [:notes] }
