--- a/app/views/renalware/transplants/recipient_operations/_operation.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_operation.html.slim
@@ -5,8 +5,8 @@ ruby:
     :kidney_perfused_with_blood_at,
     :operation_type,
     :transplant_site,
-    :cold_ischaemic_time,
-    :warm_ischaemic_time,
+    :cold_ischaemic_time_formatted,
+    :warm_ischaemic_time_formatted,
     :notes]
   }
 
