Added generic title to app.

--- a/app/views/renalware/layouts/application.html.slim
+++ b/app/views/renalware/layouts/application.html.slim
@@ -5,7 +5,7 @@ html lang="en"
 
     meta name="viewport" content="width=device-width, initial-scale=1.0"
 
-    title= content_for?(:title) ? yield(:title) : "Untitled"
+    title= content_for?(:title) ? yield(:title) : "Renalware v#{Renalware::VERSION}"
 
     = stylesheet_link_tag "application", media: :all
     = javascript_include_tag "vendor/modernizr"
