--- a/app/views/renalware/admin/users/index.html.slim
+++ b/app/views/renalware/admin/users/index.html.slim
@@ -17,7 +17,7 @@
         = content_tag_for(:tr, user) do
           td= link_to 'Edit', edit_admin_user_path(user)
           td= user.id
-          td= user.to_s(:reversed_full_name)
+          td= user.to_s
           td= user.username
           td= user.email
           td= user.created_at
