--- a/app/views/renalware/patients/_patient.html.slim
+++ b/app/views/renalware/patients/_patient.html.slim
@@ -1,6 +1,6 @@
 tr
   td= link_to "Demographics", patient_path(patient), title: "Demographics"
-  td.full-name= patient.to_s(:reversed_full_name)
+  td.full-name= patient.to_s
   td= patient.nhs_number
   td= patient.local_patient_id
   td= patient.sex
