--- a/app/views/renalware/doctors/_doctor.html.slim
+++ b/app/views/renalware/doctors/_doctor.html.slim
@@ -4,7 +4,7 @@ tr
     = pipe_separator
     = link_to 'Delete', doctor_path(doctor), method: :delete
   td
-    = doctor.to_s(:full_name)
+    = doctor.full_name
   td
     = doctor.code
   td
