Converted doctor form to simple_form.

--- a/app/views/renalware/doctors/new.html.slim
+++ b/app/views/renalware/doctors/new.html.slim
@@ -3,7 +3,7 @@
 
 .row
   .large-6.columns
-    = form_for @doctor, as: :doctor do |f|
+    = simple_form_for @doctor, as: :doctor do |f|
       = render partial: 'form', locals: { f: f }
       = f.submit 'Save', class: 'button'
       span= " or "
