--- a/app/views/renalware/patients/_patient.html.slim
+++ b/app/views/renalware/patients/_patient.html.slim
@@ -1,6 +1,8 @@
 tr
-  td= link_to "Admin", patient_path(patient), title: "Admin"
-  td= link_to "Clinical Summary", patient_clinical_summary_path(patient), title: "Clinical Summary"
+  td
+    = link_to "Clinical Summary", patient_clinical_summary_path(patient), title: "Clinical Summary"
+    = pipe_separator
+    = link_to "Admin", patient_path(patient), title: "Admin"
   td.full-name= patient.to_s
   td= patient.nhs_number
   td= patient.local_patient_id
