--- a/app/views/renalware/admin/users/index.html.slim
+++ b/app/views/renalware/admin/users/index.html.slim
@@ -15,7 +15,7 @@
     tbody
       - @users.each do |user|
         = content_tag_for(:tr, user) do
-          td= link_to 'Edit', edit_admin_user_path(user)
+          td= link_to "Edit", edit_admin_user_path(user) if policy(user).update?
           td= user.id
           td= user.to_s
           td= user.username
