Converted modality descriptions form to simple_form.

--- a/app/views/renalware/modalities/descriptions/_form.html.slim
+++ b/app/views/renalware/modalities/descriptions/_form.html.slim
@@ -1,4 +1,5 @@
-= m.label :name, "Modal Name"
-= m.text_field :name
-= m.label :code, "Modal Code"
-= m.text_field :code
+= m.input :name, label: "Modal Name"
+= m.input :code, label: "Modal Code"
+
+
+
