--- a/app/views/renalware/patients/_header.html.slim
+++ b/app/views/renalware/patients/_header.html.slim
@@ -1,6 +1,6 @@
 .row#patient-header
   h1
-    = "#{@patient.to_s(:full_name)} - "
+    = "#{@patient.to_s} - "
     = "KCH: #{@patient.local_patient_id}, "
     = "Age: #{@patient.age}, "
     = "#{@patient.sex}, "
