--- a/app/views/renalware/layouts/application.html.slim
+++ b/app/views/renalware/layouts/application.html.slim
@@ -12,7 +12,7 @@ html lang="en"
     = csrf_meta_tag
 
   body
-    #wrapper
+    #modals-wrapper
 
     = render partial: 'renalware/navigation/main'
     = render partial: 'renalware/shared/flash_messages'
