Show version in Help menu

--- a/app/assets/stylesheets/renalware/navigation.css.scss
+++ b/app/assets/stylesheets/renalware/navigation.css.scss
@@ -87,3 +87,10 @@ dd.patient-name {
     border-top-color: #E6E6E6;
   }
 }
+
+.top-bar-section .dropdown li.info {
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0px 15px;
+  line-height: 45px;
+  font-size: 0.8em;
+}
