--- a/app/views/renalware/navigation/_help_items.html.slim
+++ b/app/views/renalware/navigation/_help_items.html.slim
@@ -3,3 +3,5 @@ li.has-dropdown
   ul.dropdown
     li
       = link_to "Renal Reg HD/PD Reasons for Change", modalities_reasons_path
+    li.info
+      | Version #{Renalware::VERSION}
