--- a/app/views/renalware/letters/edit.html.slim
+++ b/app/views/renalware/letters/edit.html.slim
@@ -1,7 +1,7 @@
 = render layout: "renalware/patients/layout", locals: { title: "Letters" } do
   .row
     .large-12.columns
-      = form_for [@patient, @letter], as: :letter,
+      = simple_form_for [@patient, @letter], as: :letter,
         url: patient_letter_path(patient_id: @patient.to_param, id: @letter.to_param) do |f|
 
         = render partial: 'renalware/letters/form', locals: { f: f }
