--- a/app/views/renalware/letters/new.html.slim
+++ b/app/views/renalware/letters/new.html.slim
@@ -1,6 +1,6 @@
 = render layout: "renalware/patients/layout", locals: { title: "Letters" } do
   .row
     .large-12.columns
-      = form_for [@patient, @letter], as: :letter, url: patient_letters_path(@patient) do |f|
+      = simple_form_for [@patient, @letter], as: :letter, url: patient_letters_path(@patient) do |f|
         = render partial: 'renalware/letters/form', locals: { f: f }
         = f.submit 'Save', class: 'button'
