--- a/app/assets/stylesheets/renalware/autocomplete.css.scss
+++ b/app/assets/stylesheets/renalware/autocomplete.css.scss
@@ -3,3 +3,11 @@ input[type='text'].ui-autocomplete-loading {
   background-repeat: no-repeat;
   background-position: 98% center;
 }
+
+.ui-widget.ui-autocomplete {
+  font-size: 0.8em;
+}
+.ui-menu.ui-autocomplete .ui-menu-item {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
