--- a/app/assets/stylesheets/renalware/autocomplete.css.scss
+++ b/app/assets/stylesheets/renalware/autocomplete.css.scss
@@ -5,10 +5,11 @@ input[type='text'].ui-autocomplete-loading {
 }
 
 .ui-widget.ui-autocomplete {
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 .ui-menu.ui-autocomplete .ui-menu-item {
   padding-top: 0px;
   padding-bottom: 0px;
+  font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 }
