Converted bag_type form to simple_form.

--- a/app/views/renalware/bag_types/new.html.slim
+++ b/app/views/renalware/bag_types/new.html.slim
@@ -3,7 +3,7 @@
   = render partial: "renalware/shared/errors", locals: { model: @bag_type }
 
 .row
-  = form_for @bag_type, method: :post do |bt|
+  = simple_form_for @bag_type, method: :post do |bt|
     = render partial: "renalware/bag_types/form", locals: { bt: bt }
 
     = submit_tag "Save", class: "button"
