--- a/app/views/renalware/bag_types/_form.html.slim
+++ b/app/views/renalware/bag_types/_form.html.slim
@@ -1,41 +1,39 @@
 .row
   .large-6.columns
-    = bt.hidden_field :id unless bt.object.new_record?
+    = bt.input :id, as: :hidden unless bt.object.new_record?
 
-    = bt.label :manufacturer
-    = bt.select :manufacturer, manufacturer_options, { prompt: "Please select from options" }, class: "manufacturer-select"
+    = bt.input :manufacturer,
+        collection: manufacturer_options,
+        prompt: "Please select from options",
+        input_html: { class: "manufacturer-select" }
 
-    = bt.label :description
-    = bt.text_field :description
+    = bt.input :description
 
-    = bt.label :glucose_grams_per_litre, "Glucose content (g/l)"
-    = bt.text_field :glucose_grams_per_litre
+    = bt.input :glucose_grams_per_litre,
+        label: "Glucose content (g/l)"
 
     ul.no-bullet
       li
-        = bt.check_box :amino_acid
-        = bt.label :amino_acid, "Contains amino acid soln?"
+        = bt.input :amino_acid, as: :boolean,
+            label: "Contains amino acid soln?"
       li
-        = bt.check_box :icodextrin
-        = bt.label :icodextrin, "Contains icodextrin soln?"
+        = bt.input :icodextrin, as: :boolean,
+            label: "Contains icodextrin soln?"
+
       li
-        = bt.check_box :low_glucose_degradation
-        = bt.label :low_glucose_degradation, "Low glucose degradation product (GDP)"
+        = bt.input :low_glucose_degradation, as: :boolean,
+            label: "Low glucose degradation product (GDP)"
+
       li
-        = bt.check_box :low_sodium
-        = bt.label :low_sodium, "Low sodium solution"
+        = bt.input :low_sodium, as: :boolean,
+            label: "Low sodium solution"
 
-    = bt.label :sodium_mmole_l, "Sodium content (mmole/l)"
-    = bt.text_field :sodium_mmole_l
+    = bt.input :sodium_mmole_l, label: "Sodium content (mmole/l)"
 
-    = bt.label :lactate_mmole_l, "Lactate content (mmole/l)"
-    = bt.text_field :lactate_mmole_l
+    = bt.input :lactate_mmole_l, label: "Lactate content (mmole/l)"
 
-    = bt.label :bicarbonate_mmole_l, "Bicarbonate content (mmole/l)"
-    = bt.text_field :bicarbonate_mmole_l
+    = bt.input :bicarbonate_mmole_l, label: "Bicarbonate content (mmole/l)"
 
-    = bt.label :calcium_mmole_l, "Calcium content (mmole/l)"
-    = bt.text_field :calcium_mmole_l
+    = bt.input :calcium_mmole_l, label: "Calcium content (mmole/l)"
 
-    = bt.label :magnesium_mmole_l, "Magnesium content (mmole/l)"
-    = bt.text_field :magnesium_mmole_l
+    = bt.input :magnesium_mmole_l, label: "Magnesium content (mmole/l)"
