Converted user form to simple_form.

--- a/app/views/renalware/admin/users/edit.html.slim
+++ b/app/views/renalware/admin/users/edit.html.slim
@@ -4,7 +4,7 @@
 .row
   h2= @user.to_s(:full_name)
 
-  = form_for :user, url: admin_user_path(@user), method: :put do |f|
+  = simple_form_for :user, url: admin_user_path(@user), method: :put do |f|
     = f.hidden_field :approved, value: true
 
     - if @user.errors.any?
