Add enterred_on to TransplantRegistration

--- a/app/views/renalware/transplants/registrations/show.html.slim
+++ b/app/views/renalware/transplants/registrations/show.html.slim
@@ -10,5 +10,5 @@
 
     = render "renalware/shared/attributes_group",
         legend: "Admin", destination: "admin",
-        models: { @registration => %i(referred_on assessed_on contact notes) }
+        models: { @registration => %i(referred_on assessed_on enterred_on contact notes) }
 
