--- a/app/views/renalware/transplants/registrations/_form.html.slim
+++ b/app/views/renalware/transplants/registrations/_form.html.slim
@@ -69,6 +69,7 @@ ruby:
         locals: { legend: "Admin", name: "admin" } do
       = f.input :referred_on, as: :date_picker
       = f.input :assessed_on, as: :date_picker
+      = f.input :enterred_on, as: :date_picker
       = f.input :contact, as: :text, input_html: { rows: 5 }
       = f.input :notes, as: :text, input_html: { rows: 5 }
 
