--- a/app/views/renalware/admin/users/edit.html.slim
+++ b/app/views/renalware/admin/users/edit.html.slim
@@ -4,8 +4,8 @@
 .row
   h2= @user.to_s(:full_name)
 
-  = simple_form_for :user, url: admin_user_path(@user), method: :put do |f|
-    = f.hidden_field :approved, value: true
+  = simple_form_for @user, url: admin_user_path(@user) do |f|
+    = f.input :approved, as: :hidden, input_html: { value: true }
 
     - if @user.errors.any?
       ul.error-messages
@@ -14,17 +14,17 @@
 
     - if @user.expired?
       .row
-        = check_box_tag 'user[unexpire]', true, false, class: 'inline'
-        = label_tag :user_unexpire, 'Reactivate account'
+        = check_box_tag "user[unexpire]", true, false, class: "inline"
+        = label_tag :user_unexpire, "Reactivate account"
 
     .row
       - Renalware::Role.all.each_with_index do |role, index|
         - element_id = "user_role_ids_#{index}"
-        = check_box_tag 'user[role_ids][]', role.id, @user.has_role?(role.name), id: element_id, class: 'inline'
+        = check_box_tag "user[role_ids][]", role.id, @user.has_role?(role.name), id: element_id, class: "inline"
         = label_tag element_id, role.name.humanize
 
     .row
-      - msg = @user.approved? ? 'Update' : 'Approve'
-      = f.submit msg, class: 'button'
+      - msg = @user.approved? ? "Update" : "Approve"
+      = f.submit msg, class: "button"
       span= " or "
       = link_to "cancel", admin_users_path
