--- a/app/views/renalware/events/types/edit.html.slim
+++ b/app/views/renalware/events/types/edit.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .large-6.columns
-    = simple_form_for @event_type, method: :put do |f|
+    = simple_form_for @event_type do |f|
       = render partial: "renalware/events/types/form", locals: { f: f }
 
       = submit_tag "Update", class: "button"
