--- a/app/views/renalware/events/types/new.html.slim
+++ b/app/views/renalware/events/types/new.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .large-6.columns
-    = simple_form_for @event_type, method: :post do |f|
+    = simple_form_for @event_type do |f|
       = render partial: 'form', locals: {f: f}
       = submit_tag "Save", class: "button"
       span= " or "
