Removed collection for letter descriptions field in letters simple form.

--- a/app/views/renalware/letters/_form.html.slim
+++ b/app/views/renalware/letters/_form.html.slim
@@ -11,7 +11,7 @@
         .columns.large-10.inline
           = f.association :letter_description,
               label: "Description",
-              collection: Renalware::LetterDescription.all, selected: @letter.letter_description_id,
+              selected: @letter.letter_description_id,
               value_method: :id,
               label_method: :text,
               include_blank: true,
