--- a/app/views/renalware/modalities/descriptions/new.html.slim
+++ b/app/views/renalware/modalities/descriptions/new.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .large-6.columns
-      = simple_form_for @modality_description, method: :post do |m|
+      = simple_form_for @modality_description do |m|
         = render partial: "form", locals: { m: m }
 
         = submit_tag "Save", class: "button"
