Web view of the Tx Wait List

--- a/app/assets/stylesheets/renalware/tables.css.scss
+++ b/app/assets/stylesheets/renalware/tables.css.scss
@@ -28,6 +28,15 @@ table {
   }
 }
 
+table.report {
+  table-layout: auto;
+
+  th, td {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
 th, td {
   overflow: hidden;
 }
