Hide some stuff when printing list

--- a/app/views/renalware/transplants/registrations/_registration.html.slim
+++ b/app/views/renalware/transplants/registrations/_registration.html.slim
@@ -1,5 +1,5 @@
 tr
-  td
+  td.noprint
     = link_to "Clin&nbsp;Summ".html_safe, patient_clinical_summary_path(registration.patient)
     = pipe_separator
     = link_to "Admin", patient_path(registration.patient)
