--- a/app/assets/stylesheets/renalware/print.css.scss
+++ b/app/assets/stylesheets/renalware/print.css.scss
@@ -1,3 +1,9 @@
+@media screen {
+  .print-only {
+    display: none;
+  }
+}
+
 @media print {
   html {
     font-size: 0.7em;
@@ -8,6 +14,10 @@
   }
 
   .sub-nav, .top-bar {
+    display: none;
+  }
+
+  .noprint {
     display: none;
   }
 }
