--- a/app/views/renalware/transplants/recipient_operations/_form.html.slim
+++ b/app/views/renalware/transplants/recipient_operations/_form.html.slim
@@ -15,7 +15,7 @@ ruby:
     = f.input :donor_kidney_removed_from_ice_at, as: :datetime_picker
     = f.input :kidney_perfused_with_blood_at, as: :datetime_picker
     = f.input :operation_type, input_html: { class: "small-input" }
-    = f.input :hospital, as: :select, collection: Renalware::Hospital.ordered.active
+    = f.input :hospital_id, as: :select, collection: Renalware::Hospital.ordered.active
     = f.input :cold_ischaemic_time_formatted, as: :string, input_html: { class: "small-input" }
     = f.input :warm_ischaemic_time_formatted, as: :string, input_html: { class: "small-input" }
     = f.input :notes, as: :text, input_html: { rows: 5 }
