--- a/app/views/renalware/transplants/registrations/index.html.slim
+++ b/app/views/renalware/transplants/registrations/index.html.slim
@@ -45,3 +45,5 @@ ruby:
       - @registrations.each do |registration|
         = render "registration", registration: registration
 
+
+  = paginate @registrations
